--- a/01/07/CMakeLists.txt
+++ b/01/07/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.12)
 project(hellocmake LANGUAGES CXX)
 
 add_library(hellolib STATIC hello.cpp)
-add_executable(a.out main.cpp)
+add_executable(a.out main.cpp other.cpp)
 target_link_libraries(a.out PUBLIC hellolib)
