add test script

--- a/04/8_benchmark/01/CMakeLists.txt
+++ b/04/8_benchmark/01/CMakeLists.txt
@@ -9,11 +9,20 @@ add_executable(testbench
     main.cpp
     aos.cpp
     aos_aligned.cpp
+    aos_parallel.cpp
     soa.cpp
     soa_size_t.cpp
     soa_unroll.cpp
+    soa_simd.cpp
+    soa_parallel.cpp
     aosoa.cpp
     )
 
 find_package(OpenMP REQUIRED)
 target_link_libraries(testbench PUBLIC OpenMP::OpenMP_CXX)
+if (DEFINED TEST_SIZE)
+    target_compile_definitions(testbench PUBLIC N=${TEST_SIZE})
+endif()
+if (DEFINED TEST_SAMPLES)
+    target_compile_definitions(testbench PUBLIC TIMES=${TEST_SAMPLES})
+endif()
