--- a/06/01_parallel_for/02/CMakeLists.txt
+++ b/06/01_parallel_for/02/CMakeLists.txt
@@ -10,5 +10,5 @@ add_executable(main main.cpp)
 #find_package(OpenMP REQUIRED)
 #target_link_libraries(main PUBLIC OpenMP::OpenMP_CXX)
 
-#find_package(TBB REQUIRED)
-#target_link_libraries(main PUBLIC TBB::tbb)
+find_package(TBB REQUIRED)
+target_link_libraries(main PUBLIC TBB::tbb)
