--- a/07/01_membound/02/CMakeLists.txt
+++ b/07/01_membound/02/CMakeLists.txt
@@ -12,3 +12,5 @@ target_link_libraries(main PUBLIC OpenMP::OpenMP_CXX)
 
 #find_package(TBB REQUIRED)
 #target_link_libraries(main PUBLIC TBB::tbb)
+
+target_compile_options(main PUBLIC -fno-tree-vectorize)
