--- a/08/10_stencil/01/CMakeLists.txt
+++ b/08/10_stencil/01/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_BUILD_TYPE Release)
 
 project(hellocuda LANGUAGES CXX CUDA)
 
-add_executable(main main.cu)
-target_include_directories(main PUBLIC ../../include)
+add_executable(main main.cu stb_image.cpp stb_image_write.cpp)
+target_include_directories(main PUBLIC . ../../include)
 target_compile_options(main PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:--extended-lambda>)
 target_compile_options(main PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>)
