--- a/09/01_texture/01/CMakeLists.txt
+++ b/09/01_texture/01/CMakeLists.txt
@@ -10,7 +10,7 @@ target_include_directories(main PUBLIC . ../../include)
 target_compile_options(main PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:--extended-lambda>)
 target_compile_options(main PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr>)
 
-target_sources(main PUBLIC vdbio.cpp)
 find_package(OpenVDB REQUIRED)
 message(STATUS "Found OpenVDB ${OpenVDB_VERSION} at ${OpenVDB_LIBRARIES}")
 target_link_libraries(main PUBLIC OpenVDB::openvdb)
+target_sources(main PUBLIC writevdb.cpp)
