--- a/11/04_library/07/CMakeLists.txt
+++ b/11/04_library/07/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(otherlib STATIC otherlib.cpp)
+set_property(TARGET otherlib PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 add_library(mylib SHARED mylib.cpp)
 target_link_libraries(mylib PUBLIC otherlib)
