--- a/11/06_package/08/CMakeLists.txt
+++ b/11/06_package/08/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(main main.cpp)
 
 find_package(TBB)
-if (TARGET TBB::tbb)
+if (TBB_FOUND)
     message(STATUS "TBB found at: ${TBB_DIR}")
     target_link_libraries(main PUBLIC TBB::tbb)
     target_compile_definitions(main PUBLIC WITH_TBB)
