--- a/11/template/CMakeLists.txt
+++ b/11/template/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.15)
-project(hellocmake LANGUAGES CXX)
+project(hellocmake)
 
+message("PROJECT_NAME: ${PROJECT_NAME}")
+message("PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
+message("PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
+message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
+message("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 add_executable(main main.cpp)
 
-set(WITH_TBB ON CACHE BOOL "set to ON to enable TBB, OFF to disable TBB.")
-if (WITH_TBB)
-    target_compile_definitions(main PUBLIC WITH_TBB)
-    find_package(TBB REQUIRED)
-    target_link_libraries(main PUBLIC TBB::tbb)
-endif()
+add_subdirectory(mylib)
