--- a/11/12_project/05/CMakeLists.txt
+++ b/11/12_project/05/CMakeLists.txt
@@ -1,6 +1,11 @@
-cmake_minimum_required(VERSION 3.15...3.20)
-project(hellocmake LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.15)
+project(hellocmake)
 
-message("CMAKE_VERSION: ${CMAKE_VERSION}")
-message("CMAKE_MINIMUM_REQUIRED_VERSION: ${CMAKE_MINIMUM_REQUIRED_VERSION}")
+message("PROJECT_NAME: ${PROJECT_NAME}")
+message("PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
+message("PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
+message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
+message("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 add_executable(main main.cpp)
+
+add_subdirectory(mylib)
