--- a/11/12_project/06/CMakeLists.txt
+++ b/11/12_project/06/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
-project(hellocmake
-    DESCRIPTION "A free, open-source, online modern C++ course"
-    HOMEPAGE_URL https://github.com/parallel101/course
-    )
 
-message("PROJECT_NAME: ${PROJECT_NAME}")
-message("PROJECT_DESCRIPTION: ${PROJECT_DESCRIPTION}")
-message("PROJECT_HOMEPAGE_URL: ${PROJECT_HOMEPAGE_URL}")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS ON)
+
+project(hellocmake LANGUAGES CXX)
+
 add_executable(main main.cpp)
