--- a/11/template/CMakeLists.txt
+++ b/11/template/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
+project(hellocmake)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS ON)
-
-project(hellocmake LANGUAGES C CXX)
+message("PATH is: $ENV{PATH}")
 
 add_executable(main main.cpp)
