--- a/11/template/CMakeLists.txt
+++ b/11/template/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
 project(hellocmake)
 
-message("PATH is: $ENV{PATH}")
+if (DEFINED ENV{MYVAR})
+    message("MYVAR is: $ENV{MYVAR}")
+else()
+    message("MYVAR is not defined")
+endif()
 
 add_executable(main main.cpp)
