--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "hw10"]
 	path = hw10
 	url = https://github.com/parallel101/hw10.git
+[submodule "hw11"]
+	path = hw11
+	url = https://github.com/parallel101/hw11.git
