--- a/16/00/CMakeLists.txt
+++ b/16/00/CMakeLists.txt
@@ -6,8 +6,11 @@ endif()
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake;${CMAKE_MODULE_PATH}")
 
 project(CppCMakeDemo LANGUAGES CXX)
+
+include(MyUsefulFuncs)
 
 add_subdirectory(pybmain)
 add_subdirectory(biology)
