--- a/16/00/pybmain/CMakeLists.txt
+++ b/16/00/pybmain/CMakeLists.txt
@@ -1,5 +1,6 @@
-file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h)
-add_executable(pybmain ${srcs})
-target_include_directories(pybmain PUBLIC include)
+my_add_target(pybmain EXECUTABLE biology)
+#file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h)
+#add_executable(pybmain ${srcs})
+#target_include_directories(pybmain PUBLIC include)
 
 target_link_libraries(pybmain PUBLIC biology)
