--- a/slides/atomic/CMakeLists.txt
+++ b/slides/atomic/CMakeLists.txt
@@ -6,5 +6,19 @@ project(main)
 
 set(SOURCES main.cpp)
 
-add_executable(main ${SOURCES})
-target_compile_options(main PRIVATE -Wall -Wextra -Werror=return-type)
+add_compile_options(-Wall -Wextra -Werror=return-type)
+add_executable(main main.cpp)
+add_executable(test test.cpp)
+add_dependencies(test main)
+
+find_package(TBB REQUIRED)
+if (TARGET TBB::tbb)
+    target_link_libraries(test PRIVATE TBB::tbb)
+    target_compile_definitions(test PRIVATE HAS_TBB)
+endif()
+
+add_custom_target(run
+    COMMAND $<TARGET_FILE:test>
+    DEPENDS test
+    WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
+)
