--- a/slides/atomic/CMakeLists.txt
+++ b/slides/atomic/CMakeLists.txt
@@ -8,17 +8,9 @@ set(SOURCES main.cpp)
 
 add_compile_options(-Wall -Wextra -Werror=return-type)
 add_executable(main main.cpp)
-add_executable(test test.cpp)
-add_dependencies(test main)
-
-find_package(TBB REQUIRED)
-if (TARGET TBB::tbb)
-    target_link_libraries(test PRIVATE TBB::tbb)
-    target_compile_definitions(test PRIVATE HAS_TBB)
-endif()
 
 add_custom_target(run
-    COMMAND $<TARGET_FILE:test>
-    DEPENDS test
+    COMMAND $<TARGET_FILE:main>
+    DEPENDS main
     WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
