--- a/slides/reflect/CMakeLists.txt
+++ b/slides/reflect/CMakeLists.txt
@@ -5,9 +5,16 @@ set(CMAKE_CXX_STANDARD 20)
 project(main)
 
 add_compile_options(-Wall -Wextra -Werror=return-type)
+if (MSVC)
+    add_compile_options(/Zc:preprocessor)
+endif()
 
-file(GLOB sources "*.cpp")
+file(GLOB sources CONFIGURE_DEPENDS "*.cpp")
 foreach(source IN LISTS sources)
     get_filename_component(name ${source} NAME_WE)
     add_executable(${name} ${source})
+    target_link_libraries(${name} PRIVATE jsoncpp)
+    target_include_directories(${name} PRIVATE /usr/include/python3.12)
+    # find_package(pybind11 REQUIRED)
+    # target_link_libraries(${name} PRIVATE pybind11)
 endforeach()
