--- a/slides/cudagemm/CMakeLists.txt
+++ b/slides/cudagemm/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CUDA_STANDARD 20)
 if (NOT DEFINED CMAKE_CUDA_ARCHITECTURES AND
     CMAKE_VERSION VERSION_GREATER_EQUAL 3.24)
     set(CMAKE_CUDA_ARCHITECTURES native)
+else()
+    set(CMAKE_CUDA_ARCHITECTURES 86)
 endif()
 
 project(cloth LANGUAGES CXX CUDA)
